# ChangeLog for app-office/grisbi
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/grisbi/ChangeLog,v 1.30 2008/08/03 10:34:51 ulm Exp $

  13 Oct 2008; Frédéric Lietart <thelinuxfr@free.fr>
  -grisbi-20081003.ebuild, +grisbi-20081013.ebuild:
  Upstream CVS 0.6

  03 Oct 2008; <fred@gentoo.org> -grisbi-20080929.ebuild,
  +grisbi-20081003.ebuild:
  Upstream CVS

  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  19 May 2008; Daniel Gryniewicz <dang@gentoo.org> files/grisbi.desktop,
  grisbi-0.5.8.ebuild, grisbi-0.5.9.ebuild:
  Fix grisbi deps for new latex virtuals; bug #196745

  18 May 2008; Gilles Dartiguelongue <eva@gentoo.org> -grisbi-0.5.7.ebuild,
  grisbi-0.5.8.ebuild, grisbi-0.5.9.ebuild:
  reorder R/DEPENDS (bug #217278) and change syntax here and there.

  26 May 2007; Wulf C. Krueger <philantrop@gentoo.org> grisbi-0.5.9.ebuild:
  Stable on amd64, bug 179782.

  25 Jan 2007; Marius Mauch <genone@gentoo.org> grisbi-0.5.7.ebuild,
  grisbi-0.5.8.ebuild, grisbi-0.5.9.ebuild:
  Replacing einfo with elog

  01 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> grisbi-0.5.9.ebuild:
  ppc stable, bug #156630

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> grisbi-0.5.9.ebuild:
  Stable on sparc

*grisbi-0.5.9 (27 Oct 2006)

  27 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> grisbi-0.5.7.ebuild,
  grisbi-0.5.8.ebuild, +grisbi-0.5.9.ebuild:
  Revbump wrt #139930, 0.5.8 sparc stable, fix DEPs wrt #151284

  13 May 2006; Olivier Crête <tester@gentoo.org> grisbi-0.5.8.ebuild:
  Stable on amd64

*grisbi-0.5.8 (01 Apr 2006)

  01 Apr 2006; Olivier Crête <tester@gentoo.org> -grisbi-0.5.6.ebuild,
  +grisbi-0.5.8.ebuild:
  Version bump and cleanup of old version

  19 Nov 2005; Simon Stelling <blubb@gentoo.org> grisbi-0.5.7.ebuild:
  stable on amd64

  22 Oct 2005; Mark Loeser <halcy0n@gentoo.org> grisbi-0.5.7.ebuild: