@@ -1,6 +1,6 @@
 AUX grisbi-0.5.6-latex-unicode.patch 461 RMD160 fa6bd5134e11768c5ee51e15931992fd34050248 SHA1 b8298c8d0fd4bedd32724f2126e155cae838fbbd SHA256 30d8bea8b5c53dc96c62da05a3f374d50cdfcb5ec3c736508c207e04d5f2fa5f
 AUX grisbi.desktop 208 RMD160 17ed2f83dbb84f952704c265060a2dd6340c2925 SHA1 c48a9df6cec1d0235d99b9ea6880a69b5ceaa278 SHA256 2dd55ad3342f13d6ac2b7fb9dcfb097c60268ccb7bd7276c2b460b3439647886
-DIST grisbi-20081013.tar.gz 2019677 RMD160 efa02747fa5b9b60ee8b7a70e5fbf98d6b0fe574 SHA1 0ecaff03644cc9828f189e612a640c813bf1589e SHA256 033e95dd7f8e97186eabd6a443aa4d73b38184680828765c6850e97fe3706928
-EBUILD grisbi-20081013.ebuild 1626 RMD160 105bb458635acb06364a5822c25dfc57b525ca15 SHA1 561ea9f47548ecb831d7888d2d6e00f828b66a90 SHA256 b17843d22284f71f7badaf9cca0e0035102f4a7ee602cdc6cb834e40fbd09068
-MISC ChangeLog 5314 RMD160 7ac47a99905054601375bbfecb494995ebc9a2d4 SHA1 06e78d3c28d506aeeb91ff53da85e67c76a7cd14 SHA256 270f7953f06f1f12832e6fad0c41c57805f35a29f51befea7e754f35a71c53ae
+DIST grisbi-20081015.tar.gz 2054601 RMD160 001a834d932a73725ab5397de276267f694b6850 SHA1 6471b9d0a52b2baa3456e5dc6e7cdeb7841c5e83 SHA256 c822a796f2bd16bad46c8a4aabfb7b753a9b2af1d87b415de88d0ddb5b98f3b5
+EBUILD grisbi-20081015.ebuild 1698 RMD160 b94c480445bcbd94892e8de4d7fc2272f41e04b6 SHA1 e8f5f8f290642a2961c7971f98a036dc662e9ad9 SHA256 6c9d0db1beec38de8b4c52bcd6380744d41b7b62bf6467317eb7f13aa0f96c3e
+MISC ChangeLog 5437 RMD160 1f474d7c858f2dc6a5892d904978132316ed66fd SHA1 281eed360b776ce2d627e6a43d77a7c77ab16814 SHA256 01c03aa9ccdf327417be2a80c6f567060e1175cbaf7facb35176c36b14c680de
 MISC metadata.xml 421 RMD160 b781f95e4de17ea7c3942375d7f2f243b2923168 SHA1 232fd7b1f95f2997adc2582ca0ad0fd8dac6d93c SHA256 c04e35ce9ad92850988ae7f47e7f716704ff55c6c45b7ec632493f82e6713ebb
